some fixes such as spelling errors and spacing issues

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -29,6 +29,11 @@ h1 img {
     margin-top: 5px;
 }
 
+h2 {
+    padding-bottom: 2px;
+    padding-top: 4px;
+}
+
 .p {
     font-family: "Zalando Sans", sans-serif
 }
